--- a/public/css/headerAdmin.css
+++ b/public/css/headerAdmin.css
@@ -1,3 +1,12 @@
+/* Add a color to the active/current link */
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  display: block;
+}
+
 .topnav {
   background-color: #333;
   overflow: hidden;
@@ -65,50 +74,8 @@
   display: block;
 }
 
-.topnav input[type="text"] {
-  width: 400px;
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 20px;
-  border: none;
-}
-
-.topnav .search-container {
-  float: left;
-  margin-left: 75px;
-}
-
-.topnav .search-container button {
-  float: right;
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 20px;
-  color: white;
-  border: none;
-  cursor: pointer;
-  background-color: #04aa6d;
-}
-
-.topnav .search-container button:hover {
-  background: #ccc;
-}
-
 @media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
-  }
   .topnav a,
-  .topnav input[type="text"],
-  .topnav .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
   .topnav input[type="text"] {
     border: 1px solid #ccc;
   }
